src/css/typography/base.css
h1,
h2,
h3,
h4,
h5,
h6 {
	line-height: var(--line-height-heading);
}

h2,
h3,
h4,
h5,
h6 {
	margin-block: 1.5em 0.5em;
}

p,
ul,
ol,
dl,
blockquote,
pre,
.Note {
	margin-block-end: 1em;
}

a {
	color: var(--color-brand);
	word-wrap: break-word;
	word-break: break-all;
	word-break: break-word;
	border-radius: var(--border-radius-small); /* Rounded corners for focus outline. */
}

a:focus {
	text-decoration: none;
	outline: 0.125em solid currentcolor;
	outline-offset: 0.125em;
}

hr {
	block-size: 0.25em;
	margin-block: 2em;
	background: var(--color-highlight-background);
	border: 0;
	border-radius: var(--border-radius-small);
}

